--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <img src="./assets/image/92613027.jpeg" alt="Khang Tèo's Avatar">
             <h1>Khang Tèo</h1>
             <div class="description">
-                <p>Literally nothing special in this webpage. </p><a href="https://github.com/khangteo1000/khangteo1000.github.io" target="_blank">Source code here</a>
+                <p>Coding is my favorite things, I usually spend time on it when I'm boring. </p><a href="https://github.com/khangteo1000/khangteo1000.github.io" target="_blank">Source code here</a>
             </div>
             <div class="social-media">
-                <a href="https://www.facebook.com/khang.teo.7355" target="_blank" class="facebook">
+                <a href="https://www.facebook.com/cyp.lucastero" target="_blank" class="facebook">
                     <i class="fa-brands fa-facebook"></i>
                     <p>Facebook</p>
                 </li>
