--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='theme-color' content='#000619'>
     <title>Khang Teo</title>
     <link rel="stylesheet" href="./assets/stylesheet/index.css">
     <script src="https://kit.fontawesome.com/a8e8e98323.js" crossorigin="anonymous"></script>
